--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,17 +1,19 @@
 workflows:
   android-build:
-    name: Android build
+    name: Android Build
     environment:
       flutter: stable
       xcode: latest
     scripts:
-      - name: Install packages
+      - name: Install dependencies
         script: |
           flutter pub get
-      - name: Build Android APK
+      - name: Build APK
         script: |
-          flutter build apk --release --target-platform=android-arm,android-arm64,android-x64
+          flutter build apk --release
     artifacts:
       - build/app/outputs/flutter-apk/app-release.apk
     publishing:
-      - provider: none
+      email:
+        recipients:
+          - your-email@example.com
