--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,21 @@
 name: shree_digital_library
-description: Offline Shree Digital Library - made by Aditya & Anshik
-publish_to: 'none'
+description: Shree Digital Library - Offline Flutter Project
+publish_to: "none"
+
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=2.18.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+
   cupertino_icons: ^1.0.2
-  sqflite: ^2.2.8
-  path_provider: ^2.0.15
-  path: ^1.8.3
+  provider: ^6.0.5
+  shared_preferences: ^2.1.1
+  uuid: ^3.0.7
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
@@ -20,3 +23,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
